projects/cts/consul/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consul
  name: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - image: consul:1.15.4
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "150m"
              memory: "400Mi"
          imagePullPolicy: Always
          name: consul
