projects/cts/consul/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  labels:
    app: consul
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  cts-consul-dev.coherent.in
      secretName: consul-tls
  rules:
  - host: "cts-consul-dev.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: consul
            port: 
              number: 8500
